--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-html5video": "^2.5.1",
     "react-icons": "^4.11.0",
     "react-lazyload": "^3.2.0",
+    "react-material-ui-carousel": "^3.4.2",
     "react-parallax": "^3.5.1",
     "react-responsive-masonry": "^2.1.7",
     "react-router-dom": "^6.15.0"
